<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            app:menu="@menu/main_menu"
            app:title="@string/app_name" />

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/main_button_new_player"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_new_player"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/main_et_player1_name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:hint="@string/main_player1_name"
        android:labelFor="@id/main_et_player1_name"
        android:layout_marginHorizontal="30dp"
        android:visibility="invisible">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/main_et_player1_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/main_et_player2_name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/main_player2_name"
        android:labelFor="@id/main_et_player2_name"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="30dp"
        android:visibility="invisible">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/main_et_player2_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/main_button_start_mew_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_start_new_game"
        android:layout_gravity="center"
        android:layout_marginTop="200dp"
        android:visibility="invisible"
        android:enabled="false" />

</LinearLayout>