<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameActivity">

    <TextView
        android:id="@+id/game_txt_name1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/game_nom1"
        android:textSize="20sp"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/game_button_player2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="90dp"
        app:layout_constraintTop_toBottomOf="@id/game_txt_name1" />

    <TextView
        android:id="@+id/game_txt_question2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Question"
        android:textSize="20sp"
        android:padding="10dp"
        android:rotation="180"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/game_button_player2"/>

    <TextView
        android:id="@+id/game_txt_score_player1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textSize="100sp"
        android:gravity="center"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/game_txt_name1"
        app:layout_constraintBottom_toTopOf="@id/game_txt_name2"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/game_txt_score_player2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textSize="100sp"
        android:gravity="center"
        android:padding="10dp"
        android:rotation="180"
        app:layout_constraintTop_toBottomOf="@id/game_txt_name1"
        app:layout_constraintBottom_toTopOf="@id/game_txt_name2"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/game_button_player1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="90dp"
        app:layout_constraintBottom_toTopOf="@id/game_txt_name2" />

    <TextView
        android:id="@+id/game_txt_question1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Question"
        android:textSize="20sp"
        android:padding="10dp"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@id/game_button_player1"/>

    <TextView
        android:id="@+id/game_txt_name2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/game_nom2"
        android:textSize="20sp"
        android:padding="10dp"
        android:rotation="180"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <RelativeLayout
        android:id="@+id/game_end_popup"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toEndOf="@id/game_txt_score_player1"
        app:layout_constraintEnd_toStartOf="@id/game_txt_score_player2"
        app:layout_constraintTop_toBottomOf="@id/game_txt_question2"
        app:layout_constraintBottom_toTopOf="@id/game_txt_question1"
        android:gravity="center"
        android:visibility="invisible">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/game_button_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/game_button_menu" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/game_button_replay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/game_button_menu"
            android:layout_marginStart="50dp"
            android:text="@string/game_button_replay" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>